[package]
name = "BuildEAR"
version = "3.1.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
license = "GPL-3.0-only"
description = "BuildEAR is a tool that generates a compilation database for clang tooling."
homepage = "https://github.com/rizsotto/Bear"
edition = "2018"
build="build.rs"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "ear"
crate-type = ["rlib"]
path = "src/lib.rs"

[[bin]]
name = "bear"
path = "src/bin/bear.rs"

[[bin]]
name = "cc"
path = "src/bin/cc.rs"

[[bin]]
name = "cxx"
path = "src/bin/cxx.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2", default-features = false }
directories = "1.0"
env_logger = "0.6"
error-chain = "0.12"
lazy_static = "1.2"
log = "0.4"
regex = "1"
scopeguard = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shellwords = "1.0"
tempfile = "3.0"

[target.'cfg(unix)'.dependencies]
nix = "0.13"

[build-dependencies]
cmake = "0.1"
