# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = [
  "bear"
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yml = "0.0"
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help", "usage", "suggestions"] }
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = ["humantime"]}
directories = "6.0"
shell-words = "1.1"
tempfile = { version = "3.19", default-features = false }
signal-hook = { version = "0.3", default-features = false }

[workspace.package]
version = "4.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
repository = "https://github.com/rizsotto/Bear"
homepage = "https://github.com/rizsotto/Bear"
license = "GPL-3"
edition = "2021"
