[package]
name = "bear-codegen"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde-saphyr = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = "1.42"
proptest = "1.6"
