[package]
name = "bear-codegen"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
