# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "bear"
description = "Bear is a tool that generates a compilation database for clang tooling."
keywords = ["clang", "clang-tooling", "compilation-database"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "bear"
path = "src/lib.rs"

[[bin]]
name = "bear-driver"
path = "src/bin/driver.rs"

[[bin]]
name = "bear-wrapper"
path = "src/bin/wrapper.rs"

[[bin]]
name = "generate-completions"
path = "src/bin/generate_completions.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
clap.workspace = true
clap_complete.workspace = true
directories.workspace = true
log.workspace = true
env_logger.workspace = true
shell-words.workspace = true
tempfile.workspace = true
signal-hook.workspace = true
crossbeam-channel.workspace = true
regex.workspace = true
which.workspace = true
libc.workspace = true

[build-dependencies]
bear-codegen = { path = "../bear-codegen" }

[dev-dependencies]
tempfile.workspace = true
mockall = "0.14"
