[package]
name = "integration-tests"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
bear = { path = "../bear" }
intercept-preload = { path = "../intercept-preload" }
tempfile.workspace = true
anyhow.workspace = true
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
shell-words.workspace = true
which.workspace = true
encoding_rs.workspace = true

[build-dependencies]
platform-checks = { path = "../platform-checks" }
which.workspace = true

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(has_preload_library)',
    'cfg(has_executable_true)',
    'cfg(has_executable_false)',
    'cfg(has_executable_echo)',
    'cfg(has_executable_sleep)',
    'cfg(has_executable_shell)',
    'cfg(has_executable_make)',
    'cfg(has_executable_compiler_c)',
    'cfg(has_executable_compiler_cxx)',
    'cfg(has_executable_compiler_fortran)',
    'cfg(has_executable_compiler_cuda)',
    'cfg(has_executable_libtool)',
    'cfg(has_executable_fakeroot)',
    'cfg(has_executable_valgrind)',
    'cfg(has_executable_ar)',
] }
