# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "intercept-preload"
description = "Dynamic library to be used with Bear for LD_PRELOAD interception"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "exec"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
bear = { path = "../bear" }
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
ctor.workspace = true

[target.'cfg(target_family = "unix")'.dependencies]
libc.workspace = true
errno.workspace = true

[build-dependencies]
platform-checks = { path = "../platform-checks" }
cc.workspace = true

[dev-dependencies]
serde_json.workspace = true
